--- a/.jshintrc
+++ b/.jshintrc
@@ -1,3 +1,25 @@
 {
-
+  "bitwise": true,
+  "camelcase": true,
+  "curly": true,
+  "eqeqeq": true,
+  "forin": true,
+  "immed": true,
+  "latedef": true,
+  "newcap": true,
+  "noarg": true,
+  "noempty": true,
+  "nonew": true,
+  "plusplus": true,
+  "quotmark": "single",
+  "undef": true,
+  "unused": true,
+  "strict": true,
+  "trailing": true,
+  "maxparams": 3,
+  "maxdepth": 2,
+  "maxlen": 140,
+  "browser": true,
+  "node": true,
+  "devel": true
 }
